<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25sp">

            <TextView
                android:id="@+id/baslikana"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/what_is_diabetes"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:videoId="wZAjVQWbMlE"
                app:autoPlay="false"
                app:showFullScreenButton="false" />


            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/whatisthediabates"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/diab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/vegetables" />

            <TextView
                android:id="@+id/baslikana1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/whatarethetypes"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/type1and2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/type_1and_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/themosttypes"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/baslikana3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/type_1_diabetes"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:videoId="C3AQIfgthh4"
                app:autoPlay="false"
                app:showFullScreenButton="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/type1yazı"
                android:textSize="25sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/type1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/type_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/type_2_diabetes"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:videoId="4SZGM_E5cLI"
                app:autoPlay="false"
                app:showFullScreenButton="false" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/type2yazı"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/how_common_is_diabetes"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/commondiabetes"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/what_are_the_symptoms_of_diabetes"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:videoId="lLGpRQNAku4"
                app:autoPlay="false"
                app:showFullScreenButton="false" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:baselineAligned="false"
                android:gravity="start"
                android:text="@string/syptomps"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>