<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybutton"
    tools:context="com.example.bffdiabetes.MainAlarmActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="113dp"
        android:layout_above="@id/button_time"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/no_alarm_set"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_time"
        android:layout_width="195dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:onClick="alarmbuton"
        android:text="@string/open_t_me_p_cker"
        android:background="@drawable/mybutton"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="193dp"
        android:layout_height="90dp"
        android:layout_below="@id/button_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/mybuton2"
        android:onClick="cancel_alarm"
        android:text="@string/cancel_alarm"
        android:textColor="@color/Red"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="OnClick" />

</RelativeLayout>